// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly checked 1`] = `
<Text
  accessibilityLabel="checkbox:checked"
  style={
    Object {
      "fontSize": 30,
    }
  }
>
  ☑
</Text>
`;

exports[`Renders correctly unchecked 1`] = `
<Text
  accessibilityLabel="checkbox:unchecked"
  style={
    Object {
      "fontSize": 30,
    }
  }
>
  ⬜
</Text>
`;
